--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,10 @@ body, .fraim {
 
 .fraim {
   width: 390px;
-  height: 2220px;
+  height: 2180px;
   background: #FF6347;
   opacity: 1;
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   overflow: hidden;
