--- a/css/main.css
+++ b/css/main.css
@@ -1039,19 +1039,20 @@ body, .fraim {
 @media (min-width: 767px) and (max-width: 908px) {
   .fraim {
     width: 910px;
-    height: 2060px;
+    height: 4060px;
   }
   .elipse1 {
-    top: 547.68px;
-    left: -230px;
-    width: 1504px;
+    top: 980px;
+    left: -400px;
+    width: 2004px;
     height: 718px;
+    transform: rotate(2deg);
 }
   .elipse2 {
-    top: -5px;
-    left: -250px;
+    top: -75px;
+    left: -400px;
     width: 1504px;
-    height: 158px;
+    height: 258px;
 
  }
   .main_logo {
@@ -1087,28 +1088,21 @@ body, .fraim {
     font-size: 26px;;
   }
   .alicats_logo, .shara_logo, .coupons_logo {
+      top: 80px;
       width: 70px;
       height: 70px;
-      box-shadow: 5px 5px 0px #000000;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom-left-radius:5px;
-      border-bottom-right-radius: 5px;
-
+      box-shadow: 3px 3px 3px #000000;
+      border-radius: 2px;
   }
   .alicats_logo {
-      top: 80px;
       left: 645px;
       margin-left: -45px;
   }
   .shara_logo {
-      top: 80px;
       left: 715px;
-
       margin-left: -20px;
   }
   .coupons_logo {
-      top: 80px;
       left: 790px;
   }
   .cat_img {
@@ -1117,6 +1111,528 @@ body, .fraim {
     width: 100px;
     height: 100px;
   }
+  .main_text {
+    top: 200px;
+    width: 650px;
+    height: 53px;
+    font-weight: 700;
+    font-size: 36px;
+    text-shadow: 0.7px 0.7px 0.5px #000000;
+    line-height: 1.5;
+  }
+  .action_name {
+    top: 305px;
+    left: 19px;
+    width: 441px;
+    height: 27px;
+    font-weight: 700;
+    font-size: 40px;
+    text-shadow: 1px 1px 0px #000000;
+    line-height: 1.5;
+      }
+      .up_to {
+        top: 345px;
+        left: 21px;
+        width: 330px;
+        height: 26px;
+        font-weight: 700;
+        font-size: 20px;
+        text-shadow: 0.7px 0.7px 0.5px #FFFFFF;
+        line-height: 2.6;
+      }
+      .holovna_page, .holovna_page_ua, .bestsellers_text, .bestsellers-text_ua  {
+      left: 19px;
+      width: 548px;
+      height: 30px;
+      font-weight: 900;
+      font-size: 34px;
+      text-shadow: 1px 1px 0px #000000;
+      line-height: 2;
+      }
+
+      .holovna_pagelink, .holovna_pagelink_ua, .bestsellers_pagelink, .bestsellers_pagelink_ua  {
+      width: 548px;
+      height: 68px;
+      left: 17px;
+      border: 1px solid #FFFFFF;
+      border-radius: 5px;
+      }
+        .holovna_page {
+          top: 400px;
+        }
+        .holovna_pagelink {
+          top: 460px;
+        }
+          .holovna_page_ua {
+          top: 540px;
+          }
+        .holovna_pagelink_ua {
+          top: 600px;
+        }
+        .bestsellers_text {
+          top: 680px;
+          }
+        .bestsellers_pagelink {
+          top: 740px;
+        }
+        .bestsellers-text_ua {
+          top: 820px;
+        }
+        .bestsellers_pagelink_ua {
+          top: 880px;
+        }
+
+    .promocodes {
+      top: 980px;
+      left: 19px;
+      width: 202px;
+      height: 31px;
+      font-weight: 900;
+      font-size: 34px;
+      text-shadow: 3px 3px 0px #000000;
+      line-height: 1.5;
+    }
+
+    .code_container3, .code_container8, .code_container20, .code_container30, .code_container50 {
+      left: 15px;
+      width: 650px;
+      height: 248px;
+      border: 2px solid #FFFFFF;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      line-height: 1.6;
+      padding: 10px;
+    }
+
+    .code_container3 {
+      top: 1050px;
+
+    }
+    .code_word {
+      display: inline-block;
+      left: 33px;
+      top: 1191px;
+      width: auto;
+      height: auto;
+      font-family: Montserrat;
+      font-weight: 400;
+      font-size: 33px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+      line-height: 1.5;
+    }
+    .code_text3, .code_text8, .code_text20, .code_text30, .code_text50 {
+      width: auto;
+      height: auto;
+      left: 83px;
+      font-weight: 700;
+      font-size: 34px;
+      text-shadow: 0px 0px 0px #000000
+      text-align: left;
+      line-height: 1.5;
+      margin-left: 5px;
+    }
+    .code_text3 {
+      top: 1191px;
+    }
+
+    .code_sum3, .code_sum8, .code_sum20, .code_sum30, .code_sum50 {
+      left: 35px;
+      width: 57px;
+      height: 25px;
+      font-weight: 500;
+      font-size: 32px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+    }
+    .code_sum3 {
+      top: 1211px;
+    }
+    .date-code {
+      left: 33px;
+      top: 1232px;
+      width: 318px;
+      height: 30px;
+      font-family: Montserrat;
+      font-weight: 300;
+      font-size: 24px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+      line-height: 3;
+    }
+    .code_link3, .code_link8, .code_link20, .code_link30, .code_link50 {
+      left: 33px;
+      width: 293px;
+      height: 25px;
+      font-weight: 300;
+      font-size: 28px;
+      color: #191970;
+      text-shadow: 0px 0px 0px #000000;
+    }
+    .code_link3 {
+      top: 1259px;
+    }
+    .code_container8 {
+      top: 1313px;
+      margin-top: 10px;
+    }
+    .code_text8 {
+      top: 1191px;
+    }
+    .code_sum8 {
+      top: 1211px;
+    }
+    .code_link8 {
+      top: 1259px;
+    }
+    .code_container20 {
+      top: 1446px;
+      margin-top: 150px;
+    }
+    .code_text20 {
+      top: 1191px;
+    }
+    .code_sum20 {
+      top: 1211px;
+    }
+    .code_link20 {
+      top: 1259px;
+    }
+    .code_container30 {
+      top: 1579px;
+      margin-top: 290px;
+    }
+    .code_text30 {
+      top: 1191px;
+    }
+    .code_sum30 {
+      top: 1211px;
+    }
+    .code_link30 {
+      top: 1259px;
+    }
+    .code_container50 {
+      top: 1712px;
+      margin-top: 420px;
+    }
+    .code_text50 {
+      top: 1191px;
+    }
+    .code_sum50 {
+      top: 1211px;
+    }
+    .code_link50 {
+      top: 1259px;
+    }
+    .smart_links {
+      display: inline-block;
+      left: 19px;
+      top: 2400px;
+      width: 373px;
+      height: 20px;
+      color: #FFFFE0;
+      position: absolute;
+      font-family: Montserrat;
+      font-weight: 900;
+      font-size: 28px;
+      text-shadow: 2px 2px 0px #000000;
+      opacity: 1;
+      text-align: left;
+      line-height: 1;
+      z-index: 10;
+    }
+    .thanks_container {
+      display: block;
+      left: 19px;
+      top: 3700px;
+      width: 325px;
+      height: 85px;
+      background-color: ;
+      opacity: 1;
+      border: 0px solid #FFFFFF;
+      border-radius: 10px;
+      position: absolute;
+      margin-bottom: 10px;
+      line-height: 1.6;
+      overflow: hidden;
+      z-index: 1;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+    .thanks {
+      left: 19px;
+      top: 3710px;
+      width: 373px;
+      height: 20px;
+      color: #FFFFE0;
+      position: ;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 22px;
+      text-shadow: 2px 2px 0px #000000;
+      opacity: 1;
+      text-align: left;
+      line-height: 1;
+      z-index: 10;
+    }
+    .block-link {
+      display: block;
+      width: 5%;
+      height: 15%;
+      text-decoration: none;
+      color: inherit; /* Якщо потрібно, можна задати кольори і текстовий декор */
+    }
+    .coins_sale_block {
+      display: block;
+      left: 53px;
+      top: 2589px;
+      width: 284px;
+      height: 115px;
+      background-color: #FF7F50;
+      opacity: 100%;
+      border: 1px solid #FFFFFF;
+      border-radius: 10px;
+      position: absolute;
+      line-height: 1;
+      overflow: hidden;
+      z-index: 1;
+      padding: 20px;
+      box-shadow: 2px 2px 8px #000000;
+      box-sizing: border-box;
+    }
+    .coins_sale_name {
+      display: block;
+      left: 76px;
+      top: 1587px;
+      width: 235px;
+      height: 38px;
+      font-family: Montserrat;
+      font-weight: 900;
+      font-size: 36px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+    }
+    .coins_sale_text {
+      display: block;
+      left: 80px;
+      top: 2430.7px;
+      width: 243.32px;
+      height: 32.3px;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 12px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      margin-top: 5px;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .night_sale_block {
+      display: block;
+      position: absolute;
+      left: 53px;
+      top: 2704px;
+      width: 284px;
+      height: 115px;
+      background-color: #FF7F50;
+      opacity: 100%;
+      border: 1px solid #FFFFFF;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 2px 2px 8px #000000;
+      box-sizing: border-box;
+      margin-top: 15px;
+    }
+    .night_sale_name {
+      display: block;
+      left: 76px;
+      top: 2587px;
+      width: 235px;
+      height: 38px;
+      font-family: Montserrat;
+      font-weight: 900;
+      font-size: 36px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .night_sale_text {
+      display: block;
+      left: 80px;
+      top: 2630.7px;
+      width: 243.32px;
+      height: 32.3px;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 12px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      margin-top: 5px;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .coupons_block {
+      display: block;
+      position: absolute;
+      left: 53px;
+      top: 2819px;
+      width: 284px;
+      height: 115px;
+      background-color: #FF7F50;
+      opacity: 100%;
+      border: 1px solid #FFFFFF;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 2px 2px 8px #000000;
+      box-sizing: border-box;
+      margin-top: 30px;
+    }
+    .coupons_name {
+      display: block;
+      left: 76px;
+      top: 2587px;
+      width: 235px;
+      height: 38px;
+      font-family: Montserrat;
+      font-weight: 900;
+      font-size: 36px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .coupons_text {
+      display: block;
+      left: 80px;
+      top: 2430.7px;
+      width: 243.32px;
+      height: 32.3px;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 12px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      margin-top: 5px;
+      opacity: 1;
+      text-align: left;
+    }
+    .coins_bot_block {
+      display: block;
+      position: absolute;
+      left: 53px;
+      top: 2934px;
+      width: 284px;
+      height: 184px;
+      background-color: #FF7F50;
+      opacity: 100%;
+      border: 1px solid #FFFFFF;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 2px 2px 8px #000000;
+      box-sizing: border-box;
+      margin-top: 45px;
+    }
+    .coins_bot_name {
+      display: block;
+      left: 76px;
+      top: 2587px;
+      width: 235px;
+      height: 38px;
+      font-family: Montserrat;
+      font-weight: 900;
+      font-size: 36px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .coins_bot_text {
+      display: block;
+      left: 80px;
+      top: 2630.7px;
+      width: 243.32px;
+      height: 32.3px;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 12px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #FFFFFF;
+      position: ;
+      margin-top: 5px;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .pedro_bot_block {
+      display: block;
+      position: absolute;
+      left: 53px;
+      top: 3118px;
+      width: 284px;
+      height: 184px;
+      background-color: #FF7F50;
+      opacity: 100%;
+      border: 1px solid #FFFFFF;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 2px 2px 8px #000000;
+      box-sizing: border-box;
+      margin-top: 60px;
+    }
+    .pedro_bot_name {
+      display: block;
+      left: 76px;
+      top: 2587px;
+      width: 235px;
+      height: 38px;
+      font-family: Montserrat;
+      font-weight: 900;
+      font-size: 36px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      opacity: 1;
+      text-align: left;
+
+    }
+    .pedro_bot_text {
+      display: block;
+      left: 80px;
+      top: 2630.7px;
+      width: 243.32px;
+      height: 32.3px;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 12px;
+      color: #FFFFFF;
+      text-shadow: 0px 0px 0px #000000;
+      position: ;
+      margin-top: 5px;
+      opacity: 1;
+      text-align: left;
+
+    }
 }
 
 /* PC */
