--- a/css/main.css
+++ b/css/main.css
@@ -1386,7 +1386,7 @@ body, .fraim {
       opacity: 1;
       border: 0px solid #FFFFFF;
       border-radius: 10px;
-      position: absolute;
+      position: ;
       margin-bottom: 10px;
       line-height: 1.6;
       overflow: hidden;
