--- a/css/main.css
+++ b/css/main.css
@@ -1070,6 +1070,17 @@ body, .fraim {
     width: 910px;
     height: 3950px;
   }
+  .fraim2 {
+  width: 910px;
+  height: 170px;
+  background: #FF6347;
+  opacity: 1;
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  box-sizing: border-box;
+}
   .elipse1 {
     top: 980px;
     left: -490px;
