--- a/css/main.css
+++ b/css/main.css
@@ -1167,6 +1167,7 @@ body, .fraim {
     left: 450px;
     width: 100px;
     height: 100px;
+    margin-left: 280px;
   }
   .main_text {
     top: 200px;
