--- a/css/evening.css
+++ b/css/evening.css
@@ -7,6 +7,7 @@ body, .fraim {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    color: var(--text-color); /* Використовуємо змінну для кольору тексту */
 }
 
 .fraim {
