--- a/css/evening.css
+++ b/css/evening.css
@@ -8,6 +8,8 @@ body, .fraim {
     padding: 0;
     overflow-x: hidden;
     color: var(--text-color); /* Використовуємо змінну для кольору тексту */
+    background-color: #ffffff; /* Білий фон */
+    color: #000000; /* Чорний текст */
 }
 
 .fraim {
